--- a/src/language/locales/ma.json
+++ b/src/language/locales/ma.json
@@ -47,7 +47,12 @@
     "Verfiy OTP": "OTP സ്ഥിരീകരിക്കുക",
     "Time Remaining": "ശേഷിച്ച സമയം",
     "Didn’t get the code": "കോഡ് ലഭിച്ചില്ലേ?",
-    "Resend": "വീണ്ടും അയയ്ക്കുക"
+    "Resend": "വീണ്ടും അയയ്ക്കുക",
+    "Alert": "മുന്നറിയിപ്പ്",
+    "Are you sure you want to Remove/Delete account?": "നിനക്ക് ഉറപ്പാണോ നിന്റെ അക്കൗണ്ട് നീക്കം ചെയ്യണം/ഡിലീറ്റ് ചെയ്യണം എന്ന്?",
+    "Cancelled": "रद्द किया गया",
+    "User cancelled image picker": "उपयोगकर्ता ने छवि चयनकर्ता रद्द कर दिया",
+    "User cancelled camera": "उपयोगकर्ता ने कैमरा रद्द कर दिया"
   },
   "Editprofile": {
     "Edit Profile": "പ്രൊഫൈൽ എഡിറ്റ് ചെയ്യുക",
@@ -410,8 +415,8 @@
     "Business Partners": "ബിസിനസ് പങ്കാളികൾ",
     "We may share your information with our affiliates, in which case we will require those affiliates to honour this Privacy Notice. Affiliates include our parent company and any subsidiaries, joint venture partners, or other companies that we control or that are under common control with us.": "ഞങ്ങൾ നിന്റെ വിവരങ്ങൾ ഞങ്ങളുടെ അഫിലിയേറ്റുകളുമായി പങ്കിട്ടേക്കാം, അങ്ങനെയാണെങ്കിൽ ഞങ്ങൾ ആ അഫിലിയേറ്റുകളോട് ഈ സ്വകാര്യതാ നോട്ടീസിനെ ബഹുമാനിക്കാൻ ആവശ്യപ്പെടും. അഫിലിയേറ്റുകളിൽ ഞങ്ങളുടെ മാതൃ കമ്പനിയും ഏതെങ്കിലും അനുബന്ധ കമ്പനികളും, സംയുക്ത സംരംഭ പങ്കാളികളും, അല്ലെങ്കിൽ ഞങ്ങൾ നിയന്ത്രിക്കുന്നതോ ഞങ്ങളോടൊപ്പം പൊതു നിയന്ത്രണത്തിലുള്ളതോ ആയ മറ്റ് കമ്പനികളും ഉൾപ്പെടുന്നു.",
     "Affiliates": "അഫിലിയേറ്റുകൾ",
-    "We may share your information with certain Google Maps Platform APIs (e.g. Google Maps API, Places API). Google Maps uses GPS, Wi-Fi, and cell towers to estimate your location. GPS is accurate to about 20 meters, while Wi-Fi and cell towers help improve accuracy when GPS signals are weak, like indoors. This data helps Google Maps provide directions, but it is not always perfectly precise. We obtain and store on your device ('cache') your location. You may revoke your consent anytime by contacting us at the contact details provided at the end of this document.": "ഞങ്ങൾ നിന്റെ വിവരങ്ങൾ ചില ഗൂഗിൾ മാപ്സ് പ്ലാറ്റ്ഫോം API-കളുമായി (ഉദാ. ഗൂഗിൾ മാപ്സ് API, പ്ലേസസ് API) പങ്കിട്ടേക്കാം. ഗൂഗിൾ മാപ്സ് നിന്റെ സ്ഥാനം അനുമാനിക്കാൻ GPS, Wi-Fi, സെൽ ടവറുകൾ എന്നിവ ഉപയോഗിക്കുന്നു. GPS ഏകദേശം 20 മീറ്റർ വരെ കൃത്യമാണ്, അതേസമയം GPS സിഗ്നലുകൾ ദുർബലമാകുമ്പോൾ, ഉദാഹരണത്തിന് ഇൻഡോറിൽ, Wi-Fi-യും സെൽ ടവറുകളും കൃത്യത മെച്ചപ്പെടുത്താൻ സഹായിക്കുന്നു. ഈ ഡാറ്റ ഗൂഗിൾ മാപ്സിന് ദിശനിർദ്ദേശങ്ങൾ നൽകാൻ സഹായിക്കുന്നു, പക്ഷേ അത് എപ്പോഴും പൂർണ്ണമായി കൃത്യമല്ല. ഞങ്ങൾ നിന്റെ സ്ഥാനം നിന്റെ ഉപകരണത്തിൽ ലഭ്യമാക്കുകയും സംഭരിക്കുകയും ('കാഷെ') ചെയ്യുന്നു. ഈ രേഖയുടെ അവസാനം നൽകിയിട്ടുള്ള ബന്ധപ്പെടാനുള്ള വിശദാംശങ്ങളിൽ ഞങ്ങളെ ബന്ധപ്പെട്ട് നിനക്ക് എപ്പോൾ വേണമെങ്കിലും നിന്റെ സമ്മതം പിൻവലിക്കാം.",
-    "When we use Google Maps Platform APIs": "ഞങ്ങൾ ഗൂഗിൾ മാപ്സ് പ്ലാറ്റ്ഫോം API-കൾ ഉപയോഗിക്കുമ്പോൾ",
+    "We may share your information with certain Google Maps Platform APIs (e.g. Google Maps API, Places API). Google Maps uses GPS, Wi-Fi, and cell towers to estimate your location. GPS is accurate to about 20 meters, while Wi-Fi and cell towers help improve accuracy when GPS signals are weak, like indoors. This data helps Google Maps provide directions, but it is not always perfectly precise. We obtain and store on your device ('cache') your location. You may revoke your consent anytime by contacting us at the contact details provided at the end of this document.": "നാം നിങ്ങളുടെ വിവരങ്ങൾ ചില ഗൂഗിള്‍ മാപ്സ് പ്ലാറ്റ്ഫോം എപിഐകൾ (ഉദാ: ഗൂഗിള്‍ മാപ്സ് എപിഐ, പ്ലേസസ് എപിഐ) തോടു പങ്കുവയ്ക്കാം. ഗൂഗിള്‍ മാപ്സ് നിങ്ങളുടെ ലൊക്കേഷൻ കണ്ടുപിടിക്കാൻ ജിപിഎസ്, വൈ-ഫൈ, സെൽ ടവറുകൾ എന്നിവ ഉപയോഗിക്കുന്നു. ജിപിഎസ് ഏകദേശം 20 മീറ്റർ വരെ കൃത്യമാണ്, പക്ഷേ ജിപിഎസ് സിഗ്നലുകൾ കുഴപ്പമുള്ളപ്പോൾ (ഉദാ: അകത്തുള്ള പ്രദേശങ്ങളിൽ) വൈ-ഫൈയും സെൽ ടവറുകളും കൃത്യത മെച്ചപ്പെടുത്താൻ സഹായിക്കുന്നു. ഈ ഡാറ്റ ഗൂഗിള്‍ മാപ്സിന് ദിശാനിർദ്ദേശങ്ങൾ നൽകാൻ സഹായിക്കുന്നു, എന്നാൽ ഇത് എല്ലാ സമയത്തും പൂർണ്ണമായും കൃത്യമാകണമെന്നില്ല. നാം നിങ്ങളുടെ ലൊക്കേഷൻ ശേഖരിച്ച് നിങ്ങളുടെ ഉപകരണത്തിൽ 'കാഷ്' ആയി സംഭരിക്കുന്നു. ഈ ഡോക്യുമെന്റിന്റെ അവസാനം നൽകിയിരിക്കുന്ന കോൺടാക്ട് വിശദാംശങ്ങളിൽ ഞങ്ങളെ ബന്ധപ്പെടുക വഴി നിങ്ങളുടെ സമ്മതം നിങ്ങൾക്ക് ഏത് സമയത്തും പിൻവലിക്കാം.",
+    "When we use Google Maps Platform APIs": "നാം ഗൂഗിള്‍ മാപ്സ് പ്ലാറ്റ്ഫോം എപിഐകൾ ഉപയോഗിക്കുമ്പോൾ",
     "We may share or transfer your information in connection with or during negotiations of, any merger, sale of company assets, financing, or acquisition of all or a portion of our business to another company.": "ഞങ്ങൾ നിന്റെ വിവരങ്ങൾ ഏതെങ്കിലും ലയനം, കമ്പനി ആസ്തികളുടെ വിൽപ്പന, ധനസഹായം, അല്ലെങ്കിൽ ഞങ്ങളുടെ ബിസിനസിന്റെ എല്ലാം അല്ലെങ്കിൽ ഒരു ഭാഗം മറ്റൊരു കമ്പനിയിലേക്ക് ഏറ്റെടുക്കൽ എന്നിവയുമായി ബന്ധപ്പെട്ടോ അല്ലെങ്കിൽ ചർച്ചകൾക്കിടയിലോ പങ്കിടുകയോ കൈമാറ്റം ചെയ്യുകയോ ചെയ്തേക്കാം.",
     "Business Transfers": "ബിസിനസ് കൈമാറ്റങ്ങൾ",
     "We may need to share your personal information in the following situations": "ഇനിപ്പറയുന്ന സാഹചര്യങ്ങളിൽ ഞങ്ങൾക്ക് നിന്റെ വ്യക്തിഗത വിവരങ്ങൾ പങ്കിടേണ്ടി വന്നേക്കാം",
